--- a/android-client/app/build.gradle
+++ b/android-client/app/build.gradle
@@ -46,10 +46,23 @@ dependencies {
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
+    
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.7.6"
+    
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.7.0"
+    
+    // Image loading
+    implementation "io.coil-kt:coil-compose:2.5.0"
+    
+    // Existing dependencies
     implementation "androidx.work:work-runtime-ktx:2.9.0"
     implementation "androidx.room:room-runtime:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
     implementation "com.squareup.okio:okio:3.6.0"
+    
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
