--- a/desktop-server/server.conf
+++ b/desktop-server/server.conf
@@ -15,3 +15,10 @@ db_path = ./photosync.db
 log_level = INFO
 log_file = ./server.log
 console_output = true
+
+# Authentication settings
+[auth]
+session_timeout_seconds = 3600  # 1 hour
+bcrypt_cost = 12                # PBKDF2 iterations = 2^12 = 4096
+max_failed_attempts = 5         # Lock account after 5 failed attempts
+lockout_duration_minutes = 15   # Account lockout duration
