--- a/android-client/app/build.gradle
+++ b/android-client/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.compose)
+    id 'kotlin-kapt'
 }
 
 android {
@@ -61,7 +62,21 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.9.0"
     implementation "androidx.room:room-runtime:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
     implementation "com.squareup.okio:okio:3.6.0"
+    
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:3.2.1"
+    implementation "androidx.paging:paging-compose:3.2.1"
+    
+    // CameraX for QR scanning
+    implementation "androidx.camera:camera-core:1.3.1"
+    implementation "androidx.camera:camera-camera2:1.3.1"
+    implementation "androidx.camera:camera-lifecycle:1.3.1"
+    implementation "androidx.camera:camera-view:1.3.1"
+    
+    // ZXing for QR code decoding
+    implementation "com.google.zxing:core:3.5.2"
     
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
