--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -6,11 +6,13 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
+        android:name=".PhotoSyncApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -20,14 +22,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pics"
         tools:targetApi="31">
+        
         <service
-            android:name=".service.SyncService"
-            android:exported="false"></service>
-
-        <service
-            android:name=".service.ConnectionService"
+            android:name=".service.EnhancedSyncService"
             android:exported="false"
             android:foregroundServiceType="dataSync" />
+
+
 
         <activity
             android:name=".MainActivity"
