Updating Server application

--- a/server/test_cpp.conf
+++ b/server/test_cpp.conf
@@ -2,30 +2,23 @@
 port = 50505
 max_connections = 10
 timeout_seconds = 300
-
+server_name = Test Server
 [storage]
 photos_dir = ./storage/photos
 temp_dir = ./storage/temp
-max_storage_gb = 100
-
-[database]
+max_storage_gb = 10
 db_path = ./photosync.db
-
 [logging]
 log_level = INFO
 log_file = ./server.log
 console_output = true
-
-# Authentication settings
 [auth]
-session_timeout_seconds = 3600  # 1 hour
-bcrypt_cost = 12                # PBKDF2 iterations = 2^12 = 4096
-max_failed_attempts = 5         # Lock account after 5 failed attempts
-lockout_duration_minutes = 15   # Account lockout duration
-
+session_timeout_seconds = 3600
+bcrypt_cost = 4
+max_failed_attempts = 5
+lockout_duration_minutes = 15
 [integrity]
 scan_interval = 3600
 verify_hash = true
-
 [retention]
 deleted_retention_days = 30
